--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "transform": {
       "^.+\\.(js)$": "babel-jest"
     }
+  },
+  "dependencies": {
+    "request": "^2.87.0",
+    "request-promise-native": "^1.0.5"
   }
 }
